# taxonomy-studio

./: .gitignore  CLAUDE.md  Cargo.toml  NEXT_STEPS.md  README.md  REFACTORING_PLAN.md  sparkling-humming-frog.md
.github/workflows/: CI.yml
assets/: beverages.json  books.json  data.json  movies.json  schema.json  stocks.json
examples/: taxman_cli.rs  taxstud_cli.rs
src/: main.rs
src/errors/: error_mapper.rs  mod.rs
src/handlers/: dialog_handlers.rs  file_handlers.rs  filter_handlers.rs  item_handlers.rs  mod.rs  ui_handlers.rs
src/operations/: file_ops.rs  mod.rs  validation.rs
src/state/: app_state.rs  mod.rs  ui_state.rs
src/ui/: dialogs.rs  formatting.rs  mod.rs  types.rs  updates.rs
taxman-core/: Cargo.toml
taxman-core/src/: filtering.rs  io.rs  lib.rs
taxstud-core/: Cargo.toml
taxstud-core/src/: filtering.rs  grouping.rs  io.rs  lib.rs  models.rs  schema.rs  schema_validation.rs  sorting.rs  validation.rs
ui/: app-window.slint  common.slint  theme.slint  tree-node-box.slint
