[workspace]
members = ["taxman-core"]

[package]
name = "taxman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.14.1"
taxman-core = { path = "./taxman-core" }
rfd = { version = "0.15", features = ["async-std"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
clap = { version = "4.5", features = ["derive"] }
unicode-normalization = "0.1"
regex = "1.10"

[build-dependencies]
slint-build = "1.14.1"
